# repo-courier

./: .dockerignore  .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  Makefile  README.md  compose.yaml  pyproject.toml  render.yaml
.github/workflows/: daily.yml
config/: config.yaml
data/history/: 2026-07-10.json  2026-07-11.json  2026-07-12.json  2026-07-13.json  2026-07-15.json
docs/research/: 竞品调研.md
reports/2026-06-29/: daily.html  daily.json  daily.md
reports/2026-07-09/: daily.html  daily.json  daily.md
reports/2026-07-10/: daily.html  daily.json  daily.md
reports/2026-07-11/: daily.html  daily.json  daily.md
reports/2026-07-12/: daily.html  daily.json  daily.md
reports/2026-07-13/: daily.html  daily.json  daily.md
reports/2026-07-15/: daily.html  daily.json  daily.md
src/repo_courier/: __init__.py  cli.py  config.py  feeds.py  github.py  matching.py  models.py  personalize.py  report.py  runner.py  storage.py  summary.py  trending.py  web.py  wechat.py
src/repo_courier/academic/: __init__.py  analyzer.py  arxiv.py  base.py  pipeline.py  prompts.py
src/repo_courier/prompts/: __init__.py  academic.py  blogs.py  common.py  news.py  products.py  security.py  wechat.py
src/repo_courier/pushers/: __init__.py  base.py  feishu.py  onebot.py  serverchan.py  wecom.py
src/repo_courier/web_assets/: app.css  (+2 more)
tests/: test_academic.py  test_cli.py  test_config.py  test_feeds.py  test_personalize.py  test_report.py  test_runner.py  test_storage.py  test_summary.py  test_trending.py  test_web.py  test_wechat.py
tests/fixtures/: trending.html
